@@ -1,3 +1,14 @@
+2002-10-16  Bill Bumgarner  <bbum@codefab.com>
+
+	* NSClassFromString() was implemented twice in the Foundation's
+	__init__.py.  The second implementation was supposed to be
+	NSStringFromClass(). Fixed.
+
+	* Added propertyListFromPythonCollection() function to
+	Foundation.  It converts a Python collection (string / dict /
+	array / tuple / numbers) into a corresponding tree of Obj-C
+	NSString / NSDictionary / NSArray / NSArray / NSNumber instances.
+
 2002-10-15 Ronald Oussoren <oussoren@cistron.nl>
 	* Exceptions are now transparently transfered to the other language.
 	  Upon transitioning back into the source language the exception
